--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -1,9 +1,9 @@
 .Header {
   display: flex;
-  margin-top: 40px;
+  margin: 40px 0 0 0px;
   justify-content: space-between;
   align-items: center;
-  width: 1240px;
+  width: 100%;
   .Logo {
     display: flex;
     width: 210px;
