--- a/src/style/logement_infos.css
+++ b/src/style/logement_infos.css
@@ -1,54 +1,21 @@
-.Logement_Infos {
+.Section_Logement_Infos {
   display: flex;
   flex-direction: column;
   width: 1240px;
   margin-top: 30px;
-  /*   .Toggle_Collapse {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 30px;
-
-    .Toggle_Title {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: relative;
-      border-radius: 10px;
-      background: #ff6060;
-      padding: 0 15px 0 15px;
-      font-size: 18px;
-      color: white;
-      font-weight: 700;
-      width: 582px;
-      height: 52px;
-    }
-
-    .Arrow_Collapse {
-      cursor: pointer;
-    }
-
-    .Collapse_Content {
-      display: flex;
-      width: 570px;
-      font-size: 18px;
-      line-height: 25px;
-      padding: 25px;
-    }
-  } */
 }
-.Logement_Infos .Div .Logement_Title {
+.Section_Logement_Infos .Logement_Infos .Logement_Title {
   position: relative;
   font-size: 36px;
   color: #ff6060;
   margin-bottom: 10px;
   max-width: 800px;
 }
-.Logement_Infos .Div .Logement_Location {
+.Section_Logement_Infos .Logement_Infos .Logement_Location {
   font-size: 18px;
   margin-bottom: 30px;
 }
-.Logement_Infos .Div .Logement_Host {
+.Section_Logement_Infos .Logement_Infos .Logement_Host {
   display: flex;
   gap: 20px;
   right: 440px;
@@ -56,13 +23,13 @@
   width: 175px;
   position: absolute;
 }
-.Logement_Infos .Div .Logement_Host .Host_Picture {
+.Section_Logement_Infos .Logement_Infos .Logement_Host .Host_Picture {
   display: flex;
   border-radius: 100%;
   height: 64px;
   width: 64px;
 }
-.Logement_Infos .Div .Logement_Host .Host_Name {
+.Section_Logement_Infos .Logement_Infos .Logement_Host .Host_Name {
   display: flex;
   color: #ff6060;
   font-size: 18px;
@@ -70,12 +37,12 @@
   text-align: right;
   line-height: 25px;
 }
-.Logement_Infos .Logement_Tags {
+.Section_Logement_Infos .Logement_Tags {
   display: flex;
-  gap: 30px;
+  gap: 10px;
   margin-bottom: 30px;
 }
-.Logement_Infos .Logement_Tags .Tags {
+.Section_Logement_Infos .Logement_Tags .Tags {
   border-radius: 10px;
   background: #ff6060;
   padding: 5px 25px;
@@ -83,7 +50,7 @@
   color: white;
   font-weight: 700;
 }
-.Logement_Infos .Logement_Rating {
+.Section_Logement_Infos .Logement_Rating {
   color: #ff6060;
   position: absolute;
   display: flex;
@@ -92,7 +59,7 @@
   right: 440px;
   top: 685px;
 }
-.Logement_Infos .Logement_Rating .Stars {
+.Section_Logement_Infos .Logement_Rating .Stars {
   width: 24px;
   height: 24px;
 }/*# sourceMappingURL=logement_infos.css.map */
