--- a/src/style/toggle_collapse.css
+++ b/src/style/toggle_collapse.css
@@ -18,20 +18,6 @@
   width: 582px;
   height: 52px;
 }
-.Toggle_Collapse .Toggle_TitleAPropos {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-  border-radius: 10px;
-  background: #ff6060;
-  padding: 0 15px 0 15px;
-  font-size: 18px;
-  color: white;
-  font-weight: 700;
-  width: 760px;
-  height: 52px;
-}
 .Toggle_Collapse .Arrow_Collapse {
   cursor: pointer;
 }
@@ -41,4 +27,39 @@
   font-size: 18px;
   line-height: 25px;
   padding: 25px;
+  background: rgba(246, 246, 246, 0.4509803922);
+}
+
+.Toggle_Collapse_APropos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  margin-top: 40px;
+}
+.Toggle_Collapse_APropos .Toggle_TitleAPropos {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+  background: #ff6060;
+  padding: 0 15px 0 15px;
+  font-size: 18px;
+  color: white;
+  font-weight: 700;
+  width: 1023px;
+  height: 52px;
+}
+.Toggle_Collapse_APropos .Arrow_Collapse {
+  cursor: pointer;
+}
+.Toggle_Collapse_APropos .Collapse_Content_APropos {
+  display: flex;
+  width: 1025px;
+  font-size: 18px;
+  line-height: 25px;
+  padding: 25px;
+  text-align: left;
+  background: rgba(246, 246, 246, 0.4509803922);
 }/*# sourceMappingURL=toggle_collapse.css.map */
