--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -5,8 +5,10 @@
   align-items: center;
   background: black;
   margin-top: 60px;
-  height: 209px;
+
   gap: 30px;
+
+  min-height: 20vh;
 
   .Logo_Footer {
     display: flex;
