--- a/src/style/cards.scss
+++ b/src/style/cards.scss
@@ -1,31 +1,23 @@
-.Background_Grid {
-  display: flex;
-  align-items: center;
+.Background_Card {
   background: #f6f6f6;
-  height: 100%;
-  width: 1240px;
   margin-top: 60px;
   padding: 60px;
   border-radius: 25px;
+  max-width: 1240px;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 0;
 
   .Link_Card {
     display: grid;
     gap: 51px;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: repeat(2, 1fr);
 
     .Card {
       position: relative;
-      width: 340px;
-      height: 340px;
       border-radius: 10px;
-      background-image: linear-gradient(
-        180deg,
-        rgba(255, 255, 255, 0) 0%,
-        rgba(10, 10, 10, 0) 42%,
-        rgba(4, 4, 4, 0.205) 99.99%,
-        rgba(0, 0, 0, 0.5) 100%
-      );
+      object-fit: cover;
 
       .Title {
         position: absolute;
