--- a/src/style/carrousel.css
+++ b/src/style/carrousel.css
@@ -6,9 +6,12 @@
   height: 425px;
   width: 1240px;
   margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .Carrousel .Left_Arrow {
   position: absolute;
+  z-index: 1;
   left: 20px;
   cursor: pointer;
 }
@@ -16,8 +19,9 @@
   position: absolute;
   right: 20px;
   cursor: pointer;
+  z-index: 1;
 }
-.Carrousel .Photo {
+.Carrousel .Photo_Carrousel {
   display: flex;
   -o-object-fit: cover;
      object-fit: cover;
