--- a/src/style/logement_infos.css
+++ b/src/style/logement_infos.css
@@ -3,13 +3,14 @@
   flex-direction: column;
   width: 1240px;
   margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .Section_Logement_Infos .Logement_Infos .Logement_Title {
   position: relative;
   font-size: 36px;
   color: #ff6060;
   margin-bottom: 10px;
-  max-width: 800px;
 }
 .Section_Logement_Infos .Logement_Infos .Logement_Location {
   font-size: 18px;
@@ -18,7 +19,7 @@
 .Section_Logement_Infos .Logement_Infos .Logement_Host {
   display: flex;
   gap: 20px;
-  right: 440px;
+  right: 305px;
   top: 600px;
   width: 175px;
   position: absolute;
@@ -56,8 +57,8 @@
   display: flex;
   flex-direction: row;
   gap: 18px;
-  right: 440px;
-  top: 685px;
+  right: 305px;
+  top: 688px;
 }
 .Section_Logement_Infos .Logement_Rating .Stars {
   width: 24px;
