--- a/src/style/banner.scss
+++ b/src/style/banner.scss
@@ -4,37 +4,68 @@
   justify-content: center;
   align-items: center;
   margin-top: 50px;
+
+  .Photo_BannerAPropos {
+    display: flex;
+    object-fit: cover;
+    border-radius: 25px;
+    filter: brightness(55%);
+    width: 100%;
+    max-width: 1240px;
+    height: 223px;
+  }
+
+  .Photo_BannerHome {
+    box-shadow: 0px 4px 4px 0px #00000040;
+    border: 1px solid #000000;
+    max-height: 223px;
+    display: flex;
+    object-fit: cover;
+    width: 100%;
+    max-width: 1240px;
+    border-radius: 25px;
+    filter: brightness(55%);
+    object-position: 0px -305px;
+  }
+
+  .Tagline_Banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-size: 48px;
+    font-weight: 700;
+    text-shadow: 1px 1px 4px #000, -1px 1px 0 #000, -1px -1px 0 #000,
+      1px -1px 0 #000;
+  }
 }
 
-.Photo_Banner {
-  position: relative;
-  display: block;
-  object-fit: cover;
-  width: 1240px;
-  height: 223px;
-  border-radius: 25px;
-  filter: brightness(55%);
-}
+@media screen and (max-width: 375px) {
+  .Banner {
+    margin-top: 20px;
+    .Photo_BannerAPropos {
+      height: 111px;
+      width: 335px;
+      border-radius: 10px;
+    }
 
-.Photo_BannerHome {
-  box-shadow: 0px 4px 4px 0px #00000040;
-  border: 1px solid #000000;
-  position: relative;
-  display: block;
-  object-fit: cover;
-  width: 1240px;
-  height: 223px;
-  border-radius: 25px;
-  filter: brightness(55%);
-}
+    .Photo_BannerHome {
+      height: 111px;
+      width: 335px;
+      box-shadow: none;
+      border-radius: 10px;
+      object-position: 0px -40px;
+    }
 
-.Texte_Banner {
-  position: absolute;
-  top: 40%;
-  left: 32%;
-  color: white;
-  font-size: 4vh;
-  font-weight: 700;
-  text-shadow: 1px 1px 4px #000, -1px 1px 0 #000, -1px -1px 0 #000,
-    1px -1px 0 #000;
+    .Tagline_Banner {
+      font-size: 24px;
+      width: 225px;
+      left: 35px;
+      text-shadow: none;
+      text-align: left;
+    }
+  }
 }
