--- a/src/style/cards.css
+++ b/src/style/cards.css
@@ -30,6 +30,7 @@
   width: 250px;
   text-align: left;
   left: 10px;
+  z-index: 2;
 }
 .Background_Card .Link_Card .Card .Cover {
   display: flex;
@@ -38,4 +39,35 @@
   width: 340px;
   height: 340px;
   border-radius: 10px;
+}
+.Background_Card .Link_Card .Card::after {
+  content: "";
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  opacity: 1;
+  z-index: 1;
+}
+
+@media screen and (max-width: 375px) {
+  .Background_Card {
+    background: none;
+    margin: 20px;
+    padding: 0px;
+  }
+  .Background_Card .Link_Card {
+    justify-content: center;
+    gap: 20px;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+  }
+  .Background_Card .Link_Card .Card .Cover {
+    width: 335px;
+    height: 255px;
+    border-radius: 10px;
+  }
 }/*# sourceMappingURL=cards.css.map */
