--- a/src/style/error.css
+++ b/src/style/error.css
@@ -3,9 +3,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 100px;
-  margin-left: auto;
-  margin-right: auto;
+  gap: 40px;
+  margin-top: 40px;
 }
 .Section_Error .Error {
   color: #ff6060;
@@ -13,17 +12,61 @@
   font-weight: 700;
   line-height: 410px;
 }
-.Section_Error .Error_Txt {
+.Section_Error .Error_Message {
+  display: flex;
+  flex-direction: row;
+}
+.Section_Error .Error_Message .Error_Tagline {
   color: #ff6060;
   font-size: 36px;
-  line-height: 51px;
+  line-height: 50px;
   font-weight: 500;
-  margin-top: 20px;
+  margin-bottom: 80px;
+}
+.Section_Error .Error_Message .Span_Error {
+  color: #ff6060;
+  font-size: 36px;
+  line-height: 50px;
+  font-weight: 500;
 }
 .Section_Error .Error_Link {
   color: black;
   font-size: 18px;
   font-weight: 500;
   line-height: 25px;
-  margin: 100px 0 80px 0;
+  margin-bottom: 55px;
+}
+
+@media screen and (max-width: 375px) {
+  .Section_Error {
+    margin: 0;
+    gap: 90px;
+    height: 350px;
+  }
+  .Section_Error .Error {
+    font-size: 96px;
+    height: 250px;
+  }
+  .Section_Error .Error_Message .Error_Tagline {
+    color: #ff6060;
+    font-size: 18px;
+    text-align: center;
+    line-height: 25px;
+    font-weight: 500;
+    margin: 0;
+  }
+  .Section_Error .Error_Message .Span_Error {
+    color: #ff6060;
+    font-size: 18px;
+    text-align: center;
+    line-height: 25px;
+    font-weight: 500;
+    margin: 0;
+  }
+  .Section_Error .Error_Link {
+    color: black;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 19px;
+  }
 }/*# sourceMappingURL=error.css.map */
