--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -4,9 +4,10 @@
   justify-content: center;
   align-items: center;
   background: black;
-  margin-top: 60px;
+  margin-top: 55px;
   gap: 30px;
-  min-height: 20vh;
+  width: 100%;
+  height: 209px;
 }
 .Background_Footer .Logo_Footer {
   display: flex;
@@ -15,9 +16,21 @@
   width: 122px;
   height: 39px;
 }
-.Background_Footer .Texte_Footer {
+.Background_Footer .Tagline_Footer {
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
+}
+
+@media screen and (max-width: 375px) {
+  .Background_Footer {
+    width: 100%;
+    height: 209px;
+    margin-top: 30px;
+  }
+  .Tagline_Footer {
+    width: 133px;
+    text-align: center;
+  }
 }/*# sourceMappingURL=footer.css.map */
