--- a/src/style/header.css
+++ b/src/style/header.css
@@ -27,4 +27,22 @@
   justify-content: center;
   align-items: center;
   font-size: 24px;
+}
+
+/*  Media Queries */
+@media screen and (max-width: 375px) {
+  .Header {
+    margin: 20px 20px 25px 20px;
+  }
+  .Header .Logo {
+    display: flex;
+    width: 145px;
+  }
+  .Header .Navbar ul {
+    gap: 30px;
+  }
+  .Header .Navbar ul .Link {
+    text-transform: uppercase;
+    font-size: 12px;
+  }
 }/*# sourceMappingURL=header.css.map */
