--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -32,3 +32,24 @@
     }
   }
 }
+
+/*  Media Queries */
+@media screen and (max-width: 375px) {
+  .Header {
+    margin: 20px 20px 25px 20px;
+    .Logo {
+      display: flex;
+      width: 145px;
+    }
+
+    .Navbar {
+      ul {
+        gap: 30px;
+        .Link {
+          text-transform: uppercase;
+          font-size: 12px;
+        }
+      }
+    }
+  }
+}
