--- a/src/style/toggle_collapse.scss
+++ b/src/style/toggle_collapse.scss
@@ -1,72 +1,127 @@
-.Toggle_Collapse {
+.Container_Logement {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  gap: 30px;
 
-  .Toggle_Title {
+  .Collapse_Title_Logement {
     display: flex;
+
     justify-content: space-between;
     align-items: center;
-    position: relative;
     border-radius: 10px;
     background: #ff6060;
-    padding: 0 15px 0 15px;
+    padding: 10px 15px;
     font-size: 18px;
     color: white;
     font-weight: 700;
     width: 582px;
     height: 52px;
+    line-height: 25px;
+
+    .Collapse_Arrow_Logement {
+      width: 24px;
+      cursor: pointer;
+    }
   }
 
-  .Arrow_Collapse {
-    cursor: pointer;
-  }
-
-  .Collapse_Content {
+  .Collapse_Content_Logement {
     display: flex;
-    width: 570px;
+    flex-direction: column;
+    width: 582px;
     font-size: 18px;
     line-height: 25px;
-    padding: 25px;
+    padding: 25px 20px 19px 20px;
+    text-align: left;
     background: #f6f6f673;
   }
 }
 
-.Toggle_Collapse_APropos {
+.Container_APropos {
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
-  gap: 40px;
-  margin-top: 40px;
 
-  .Toggle_TitleAPropos {
+  .Collapse_Title_APropos {
     display: flex;
+
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-
     border-radius: 10px;
     background: #ff6060;
-    padding: 0 15px 0 15px;
+    padding: 10px 15px;
     font-size: 18px;
     color: white;
     font-weight: 700;
     width: 1023px;
     height: 52px;
-  }
+    line-height: 34px;
+    margin-top: 40px;
 
-  .Arrow_Collapse {
-    cursor: pointer;
+    .Collapse_Arrow_APropos {
+      width: 24px;
+      cursor: pointer;
+    }
   }
 
   .Collapse_Content_APropos {
     display: flex;
+    flex-direction: column;
     width: 1025px;
     font-size: 18px;
     line-height: 25px;
     padding: 25px;
     text-align: left;
     background: #f6f6f673;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .Container_Logement {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+
+    .Collapse_Title_Logement {
+      font-size: 13px;
+      width: 335px;
+      height: 30px;
+
+      .Collapse_Arrow_Logement {
+        width: 16px;
+      }
+    }
+
+    .Collapse_Content_Logement {
+      width: 335px;
+      font-size: 12px;
+      line-height: 17px;
+      padding: 20px 20px 19px 20px;
+    }
+  }
+
+  .Container_APropos {
+    margin-bottom: 200px;
+    .Collapse_Title_APropos {
+      font-size: 13px;
+      color: white;
+      font-weight: 700;
+      width: 335px;
+      height: 30px;
+      margin-top: 20px;
+
+      .Collapse_Arrow_APropos {
+        width: 16px;
+        cursor: pointer;
+      }
+    }
+
+    .Collapse_Content_APropos {
+      width: 335px;
+      font-size: 12px;
+      line-height: 17px;
+      padding: 20px 20px 19px 20px;
+    }
   }
 }
