--- a/src/style/cards.css
+++ b/src/style/cards.css
@@ -1,18 +1,17 @@
 .Background_Card {
   background: #f6f6f6;
   margin-top: 60px;
-  padding: 60px;
+  padding: 50px;
   border-radius: 25px;
-  max-width: 1240px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 80px;
+  margin-right: 80px;
   z-index: 0;
 }
 .Background_Card .Link_Card {
   display: grid;
-  gap: 51px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  gap: 50px;
+  grid-template-columns: repeat(auto-fit, minmax(355px, 1fr));
+  grid-template-rows: auto;
 }
 .Background_Card .Link_Card .Card {
   position: relative;
@@ -36,7 +35,7 @@
   display: flex;
   -o-object-fit: cover;
      object-fit: cover;
-  width: 340px;
+  width: 100%;
   height: 340px;
   border-radius: 10px;
 }
@@ -53,20 +52,18 @@
   z-index: 1;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 1024px) {
   .Background_Card {
     background: none;
     margin: 20px;
     padding: 0px;
   }
   .Background_Card .Link_Card {
-    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(1, 1fr);
   }
   .Background_Card .Link_Card .Card .Cover {
-    width: 335px;
+    width: 100%;
     height: 255px;
     border-radius: 10px;
   }
