--- a/src/style/carrousel.scss
+++ b/src/style/carrousel.scss
@@ -4,10 +4,9 @@
   justify-content: center;
   align-items: center;
   height: 425px;
-  width: 1240px;
   margin-top: 30px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 80px;
+  margin-right: 80px;
 
   .Left_Arrow {
     position: absolute;
@@ -23,34 +22,52 @@
     z-index: 1;
   }
 
+  .Index_Indication {
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    right: 48.5%;
+    margin-bottom: 35px;
+    color: white;
+  }
+
   .Photo_Carrousel {
     display: flex;
     object-fit: cover;
-    width: 1240px;
+    width: 100%;
     height: 425px;
     border-radius: 25px;
   }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 1024px) {
   .Carrousel {
-    width: 335px;
     height: 255px;
+    margin-left: 0px;
+    margin-right: 0px;
 
     .Left_Arrow {
-      width: 11px;
       height: 19px;
+      left: 30px;
+      top: 125px;
     }
 
     .Right_Arrow {
-      width: 11px;
       height: 19px;
+      right: 30px;
+      top: 125px;
+    }
+
+    .Index_Indication {
+      display: none;
     }
 
     .Photo_Carrousel {
-      width: 335px;
+      width: 100%;
       height: 255px;
       border-radius: 10px;
+      margin-left: 20px;
+      margin-right: 20px;
     }
   }
 }
