--- a/src/style/error.css
+++ b/src/style/error.css
@@ -5,6 +5,8 @@
   flex-direction: column;
   gap: 40px;
   margin-top: 40px;
+  margin-left: 80px;
+  margin-right: 80px;
 }
 .Section_Error .Error {
   color: #ff6060;
@@ -37,7 +39,7 @@
   margin-bottom: 55px;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 1024px) {
   .Section_Error {
     margin: 0;
     gap: 90px;
