--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -4,10 +4,11 @@
   justify-content: center;
   align-items: center;
   background: black;
-  margin-top: 55px;
   gap: 30px;
+  position: absolute;
+  bottom: -250px;
+  height: 200px;
   width: 100%;
-  height: 209px;
 }
 .Background_Footer .Logo_Footer {
   display: flex;
@@ -23,13 +24,8 @@
   color: white;
 }
 
-@media screen and (max-width: 375px) {
-  .Background_Footer {
-    width: 100%;
-    height: 209px;
-    margin-top: 30px;
-  }
-  .Tagline_Footer {
+@media screen and (max-width: 1024px) {
+  .Background_Footer .Tagline_Footer {
     width: 133px;
     text-align: center;
   }
