--- a/src/style/header.css
+++ b/src/style/header.css
@@ -3,9 +3,8 @@
   margin: 40px 0 0 0px;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 80px;
+  margin-right: 80px;
 }
 .Header .Logo {
   display: flex;
@@ -27,16 +26,21 @@
   justify-content: center;
   align-items: center;
   font-size: 24px;
+  width: 100%;
 }
 
 /*  Media Queries */
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 1024px) {
   .Header {
-    margin: 20px 20px 25px 20px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   .Header .Logo {
     display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 145px;
+    height: 100%;
   }
   .Header .Navbar ul {
     gap: 30px;
