--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -3,9 +3,8 @@
   margin: 40px 0 0 0px;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 80px;
+  margin-right: 80px;
 
   .Logo {
     display: flex;
@@ -28,18 +27,23 @@
         justify-content: center;
         align-items: center;
         font-size: 24px;
+        width: 100%;
       }
     }
   }
 }
 
 /*  Media Queries */
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 1024px) {
   .Header {
-    margin: 20px 20px 25px 20px;
+    margin-left: 20px;
+    margin-right: 20px;
     .Logo {
       display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
       width: 145px;
+      height: 100%;
     }
 
     .Navbar {
