--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,11 +2,9 @@
   font-family: Montserrat;
   line-height: 34px;
   font-weight: 500;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -23,11 +21,15 @@ a:hover {
   text-decoration: underline;
 }
 
+body,
+html {
+  height: auto;
+  position: relative;
+}
 body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
-  display: block;
-  place-items: center;
-  justify-content: center;
 }
 
 h1 {
