--- a/src/style/logement_infos.css
+++ b/src/style/logement_infos.css
@@ -1,10 +1,9 @@
 .Section_Logement_Infos {
   display: flex;
   flex-direction: column;
-  width: 1240px;
   margin-top: 30px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 80px;
+  margin-right: 80px;
 }
 .Section_Logement_Infos .Logement_Infos {
   position: relative;
@@ -13,8 +12,10 @@
   position: relative;
   font-size: 36px;
   color: #ff6060;
+  max-width: 900px;
   margin-bottom: 15px;
   line-height: 25px;
+  flex-wrap: wrap;
 }
 .Section_Logement_Infos .Logement_Infos .Logement_Location {
   font-size: 18px;
@@ -43,7 +44,7 @@
   display: flex;
   gap: 20px;
   right: 0px;
-  bottom: 80px;
+  bottom: 90px;
   width: 175px;
   position: absolute;
 }
@@ -75,11 +76,11 @@
   height: 24px;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 1024px) {
   .Section_Logement_Infos {
     display: flex;
-    width: 335px;
-    margin-top: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   .Section_Logement_Infos .Logement_Infos {
     position: relative;
@@ -94,16 +95,14 @@
   }
   .Section_Logement_Infos .Logement_Tags {
     gap: 10px;
-    margin-bottom: 15px;
     flex-wrap: wrap;
   }
   .Section_Logement_Infos .Logement_Tags .Tags {
     font-size: 10px;
   }
   .Section_Logement_Infos .Host_and_Rating {
-    width: 335px;
     height: 40px;
-    margin-bottom: 20px;
+    margin: 0px 0px 20px 20px;
   }
   .Section_Logement_Infos .Host_and_Rating .Logement_Host {
     right: 0px;
