--- a/src/style/logement_infos.scss
+++ b/src/style/logement_infos.scss
@@ -1,19 +1,21 @@
 .Section_Logement_Infos {
   display: flex;
   flex-direction: column;
-  width: 1240px;
   margin-top: 30px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 80px;
+  margin-right: 80px;
 
   .Logement_Infos {
     position: relative;
+
     .Logement_Title {
       position: relative;
       font-size: 36px;
       color: #ff6060;
+      max-width: 900px;
       margin-bottom: 15px;
       line-height: 25px;
+      flex-wrap: wrap;
     }
 
     .Logement_Location {
@@ -47,7 +49,7 @@
       display: flex;
       gap: 20px;
       right: 0px;
-      bottom: 80px;
+      bottom: 90px;
       width: 175px;
       position: absolute;
 
@@ -85,15 +87,14 @@
   }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 1024px) {
   .Section_Logement_Infos {
     display: flex;
-
-    width: 335px;
-    margin-top: 15px;
-
+    margin-left: 20px;
+    margin-right: 20px;
     .Logement_Infos {
       position: relative;
+
       .Logement_Title {
         font-size: 18px;
         margin-bottom: 0px;
@@ -107,7 +108,7 @@
 
     .Logement_Tags {
       gap: 10px;
-      margin-bottom: 15px;
+
       flex-wrap: wrap;
 
       .Tags {
@@ -116,9 +117,8 @@
     }
 
     .Host_and_Rating {
-      width: 335px;
       height: 40px;
-      margin-bottom: 20px;
+      margin: 0px 0px 20px 20px;
 
       .Logement_Host {
         right: 0px;
