--- a/src/style/toggle_collapse.scss
+++ b/src/style/toggle_collapse.scss
@@ -1,21 +1,22 @@
 .Container_Logement {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  flex-direction: row;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 50px;
 
   .Collapse_Title_Logement {
     display: flex;
-
     justify-content: space-between;
     align-items: center;
-    border-radius: 10px;
+    border-radius: 5px;
     background: #ff6060;
     padding: 10px 15px;
     font-size: 18px;
     color: white;
     font-weight: 700;
-    width: 582px;
-    height: 52px;
+    width: 100%;
     line-height: 25px;
+    transition: border-radius 0.3s ease;
 
     .Collapse_Arrow_Logement {
       width: 24px;
@@ -23,27 +24,30 @@
     }
   }
 
+  .Collapse_Title_Logement.open {
+    border-radius: 10px;
+  }
+
   .Collapse_Content_Logement {
     display: flex;
     flex-direction: column;
-    width: 582px;
+    width: 100%;
     font-size: 18px;
     line-height: 25px;
     padding: 25px 20px 19px 20px;
     text-align: left;
     background: #f6f6f673;
+    width: 100%;
   }
 }
 
 .Container_APropos {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  margin-left: 80px;
+  margin-right: 80px;
+  position: relative;
 
   .Collapse_Title_APropos {
     display: flex;
-
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -53,8 +57,7 @@
     font-size: 18px;
     color: white;
     font-weight: 700;
-    width: 1023px;
-    height: 52px;
+    width: 100%;
     line-height: 34px;
     margin-top: 40px;
 
@@ -64,10 +67,14 @@
     }
   }
 
+  .Collapse_Title_APropos.open {
+    border-radius: 10px;
+  }
+
   .Collapse_Content_APropos {
     display: flex;
     flex-direction: column;
-    width: 1025px;
+    width: 100%;
     font-size: 18px;
     line-height: 25px;
     padding: 25px;
@@ -76,7 +83,7 @@
   }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 1024px) {
   .Container_Logement {
     display: flex;
     flex-direction: column;
@@ -85,7 +92,7 @@
 
     .Collapse_Title_Logement {
       font-size: 13px;
-      width: 335px;
+      width: 100%;
       height: 30px;
 
       .Collapse_Arrow_Logement {
@@ -94,7 +101,7 @@
     }
 
     .Collapse_Content_Logement {
-      width: 335px;
+      width: 100%;
       font-size: 12px;
       line-height: 17px;
       padding: 20px 20px 19px 20px;
@@ -102,12 +109,12 @@
   }
 
   .Container_APropos {
-    margin-bottom: 200px;
+    margin: 15px 20px 0px 20px;
     .Collapse_Title_APropos {
       font-size: 13px;
       color: white;
       font-weight: 700;
-      width: 335px;
+      width: 100%;
       height: 30px;
       margin-top: 20px;
 
@@ -118,7 +125,7 @@
     }
 
     .Collapse_Content_APropos {
-      width: 335px;
+      width: 100%;
       font-size: 12px;
       line-height: 17px;
       padding: 20px 20px 19px 20px;
