--- a/src/style/error.css
+++ b/src/style/error.css
@@ -43,11 +43,15 @@
   .Section_Error {
     margin: 0;
     gap: 90px;
-    height: 350px;
+    height: 400px;
   }
   .Section_Error .Error {
     font-size: 96px;
     height: 250px;
+  }
+  .Section_Error .Error_Message {
+    display: flex;
+    flex-direction: column;
   }
   .Section_Error .Error_Message .Error_Tagline {
     color: #ff6060;
