--- a/src/style/error.scss
+++ b/src/style/error.scss
@@ -48,7 +48,7 @@
   .Section_Error {
     margin: 0;
     gap: 90px;
-    height: 350px;
+    height: 400px;
 
     .Error {
       font-size: 96px;
@@ -56,6 +56,8 @@
     }
 
     .Error_Message {
+      display: flex;
+      flex-direction: column;
       .Error_Tagline {
         color: #ff6060;
         font-size: 18px;
