--- a/src/style/toggle_collapse.css
+++ b/src/style/toggle_collapse.css
@@ -91,7 +91,7 @@
     width: 16px;
   }
   .Container_Logement .Collapse_Content_Logement {
-    width: 335px;
+    width: 100%;
     font-size: 12px;
     line-height: 17px;
     padding: 20px 20px 19px 20px;
@@ -112,6 +112,7 @@
     cursor: pointer;
   }
   .Container_APropos .Collapse_Content_APropos {
+    width: 100%;
     font-size: 12px;
     line-height: 17px;
     padding: 20px 20px 19px 20px;
