--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -43,7 +43,7 @@
       justify-content: flex-start;
       align-items: flex-start;
       width: 145px;
-      height: 100%;
+      height: 46px;
     }
 
     .Navbar {
