--- a/src/style/header.css
+++ b/src/style/header.css
@@ -40,7 +40,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     width: 145px;
-    height: 100%;
+    height: 46px;
   }
   .Header .Navbar ul {
     gap: 30px;
