--- a/src/style/toggle_collapse.scss
+++ b/src/style/toggle_collapse.scss
@@ -44,6 +44,7 @@
 .Container_APropos {
   margin-left: 80px;
   margin-right: 80px;
+  margin-bottom: 40px;
   position: relative;
 
   .Collapse_Title_APropos {
